# HTS_20260413

./: .audit_log.md  .clang-format  .cursorrules  .editorconfig  .gitignore  CFO_APPLY_RESTORE.md  CFO_PIPELINE_RESTORE.md  CMakeLists.txt  DESIGN_RX_CHIP_PIPELINE_CFO.md  HTS_CFO_V5a_Internal.hpp  HTS_Development.sln  HTS_LIM.slnx  HTS_Static_Audit.ps1  PHASE4A_HOLO_REDESIGN.md  PHASE4_1_TWO_BLOCK.md  PHASE4_2_CFO_2PASS.md  PHASE_B1_AMI_COLLAPSE_DIAGNOSIS.md  PHASE_B1_AMI_DIAG_ENABLE.md  PHASE_B1_AMI_DRY_RUN.md  PHASE_B1_AMI_SCENARIO_PRECISE.md  PHASE_B1_AMI_STAGE_A0_PRECHECK.md  PHASE_B1_AMI_STEP2_PRECHECK.md  PHASE_B1_AMI_STEP2_RESULT.md  PHASE_B1_AMI_STEP3_MAIN.md  PHASE_B1_AMI_STEP3_PRECHECK.md  PHASE_B1_AMI_STEP4_PRECHECK.md  PHASE_B1_AMI_SYNC_SPLIT.md  PHASE_B1_CFO_LIMIT_SWEEP.md  PHASE_B1_INVESTIGATION.md  PHASE_B1_RUNTIME_MODE.md  PHASE_B1_SEED_ABLATION.md  PHASE_B1_STAGE6_STATUS.md  PHASE_B1_SYNC_PSLTE_RENAME.md  PHASE_B1_T6_CHIP_RATE_APPLY.md  PHASE_B1_T6_CHIP_RATE_PARAM.md  PHASE_B1_TIM_HYPOTHESIS.md  PHASE_B1_V2_DIAGNOSIS.md  PIPELINE_AUDIT_REPORT.md  S5_CFO_DIAG_BISECT_REPORT.md  S5_CFO_MICROSCOPE_REPORT.md  (+21 more)
HTS_TEST/: AMI 종합 TEST.cpp  AMI_종합_통합_테스트.cpp  CMakeLists.txt  HTS_AJ_TestRunner.cpp  HTS_AMI_Barrage30_Test_V2.cpp  HTS_AMI_CommSpec_Barrage30_Matrix_Test.cpp  HTS_AMI_Industrial_Field_Stress_Test.cpp  HTS_AMI_Measurement_Test.cpp  HTS_AMI_Realistic_Integration_Test.cpp  HTS_ARIA_KCMVP_KAT.cpp  HTS_AntiJam_Engine.cpp  HTS_AntiJam_Engine.h  HTS_BitOps.h  HTS_CFO_Bank_Test.cpp  HTS_CFO_Bank_Test_lab.cpp  HTS_CFO_Compensator.h  HTS_Channel_Calibration_Out.csv  HTS_Extended_Endurance_Test.cpp  HTS_FEC_HARQ.cpp  HTS_FEC_Layer_Test.cpp  HTS_FEC_V400_16chip_IR_Compare_Out.csv  HTS_FEC_V400_IR_Compare_Out.csv  HTS_Fractal_Channel_Compare_Out.csv  HTS_HMAC_Bridge_Test.cpp  HTS_HMAC_KCMVP_KAT.cpp  HTS_LEA_KCMVP_KAT.cpp  HTS_LPI_Measurement.cpp  HTS_LSH256_KCMVP_KAT.cpp  HTS_Modbus_Gateway_Contract_Stub.cpp  HTS_Pipeline_V2_Compare_Out.csv  HTS_Preamble_AGC.h  HTS_Secure_Memory.cpp  HTS_TEST.vcxproj  HTS_TEST.vcxproj.filters  HTS_TPC_Controller.h  HTS_TPC_LPI_Test.cpp  HTS_TPE_Bitwise_Simulation_main.cpp  HTS_V400_Dispatcher.cpp  HTS_V400_Dispatcher.hpp  HTS_검증_AMI.vcxproj  (+27 more)
HTS_TEST/HTS_Jammer_STD/: HTS_Phase3_Alpha_Harness.cpp  HTS_Phase4B2_Sample_Harness.cpp  build_phase3_alpha.cmd
HTS_TEST/PLUTO_SDR/: HTS_AntiJam_Engine.cpp  HTS_BitOps.h  HTS_DWT_Profiler.h  HTS_FEC_HARQ.cpp  HTS_FEC_HARQ.hpp  HTS_Pluto_Test.cpp  HTS_Polar_Codec.cpp  HTS_Polar_Codec.h  HTS_RS_GF16.cpp  HTS_TPC_Controller.h  HTS_V400_Dispatcher.cpp  HTS_V400_Dispatcher.hpp  HTS_검증_PLUTO_SDR.vcxproj
HTS_TEST/RX_LINE_TEST/: HTS_RX_Channel.cpp  HTS_RX_Channel.hpp  HTS_RX_LINE_TEST_v2.md  HTS_RX_Metrics.cpp  HTS_RX_Metrics.hpp  HTS_RX_Random.hpp  HTS_RX_Scenarios.cpp  HTS_RX_Scenarios.hpp  RX_LINE_TEST.cpp  RX_LINE_TEST.vcxproj
HTS_TEST/V5A_UNIT_TEST/: V5A_UNIT_TEST.vcxproj  V5A_Unit_Test.cpp
HTS_TEST/benchmark/: HTS_Fractal_Channel_Compare.cpp  HTS_L3_Spectrum_Measured_Test.cpp  HTS_Layer10111213_Sequential_Audit_PC_Test.cpp  HTS_Layer1417_Host_IPC_Tick_API_Stub.cpp  HTS_Layer14_17_Sequential_Audit_PC_Test.cpp  HTS_Layer345_Sequential_Audit_PC_Test.cpp  HTS_Layer6789_Sequential_Audit_PC_Test.cpp  HTS_Microbench_Run.cpp  HTS_Pipeline_Sequential_Audit_PC_Test.cpp  HTS_Pipeline_V2_Compare.cpp  HTS_RS_FEC_Sequential_Audit_PC_Test.cpp  HTS_V400_SIC_PC_Test.cpp
HTS_TEST/calibration/: HTS_Channel_Calibration.cpp  HTS_Channel_Calibration.h  HTS_Channel_Calibration_Report.md  HTS_Channel_Calibration_Test.cpp  HTS_Dynamic_Fractal_Mapper_PC_Test.cpp
HTS_TEST/legacy/: HTS_CFO_Compensator.h
HTS_TEST/mini_cfo/: HTS_Mini_CFO.cpp  HTS_Mini_CFO.hpp  cursor_build_mini.cmd  mini_cfo_results.txt  mini_v5a_compare.txt  mini_walsh_results.txt  test_mini_cfo.cpp
HTS_TEST/pipeline_experiment/: HTS_FEC_HARQ.cpp  HTS_FEC_HARQ.hpp  HTS_T6_SIM_Test_exp.cpp  HTS_V400_Dispatcher.cpp  HTS_V400_Dispatcher.hpp  build.bat  cw_diag_result.txt  exp_baseline_result.txt  fec_diag_result.txt  matrix_diag_result.txt  matrix_result.txt  step1_result.txt  step2_result.txt
HTS_TEST/pipeline_experiment_6515323/: HTS_T6_SIM_Test_exp.cpp  result_6515323.txt
HTS_TEST/pipeline_experiment_stage0_baseline/: HTS_V400_Dispatcher.hpp  stage0_result.txt
HTS_TEST/t6_mc/: HTS_T6_MC_Harness.cpp  MC_Scenario_Specs.hpp  RESULT_MC_HARNESS.md  build_mc_excision_off.bat  build_mc_excision_on.bat  build_mc_harness.bat  build_mc_w_010.bat  build_mc_w_025.bat  build_mc_w_050.bat  build_mc_w_off.bat  mc_ex_off_1000.err  mc_ex_on_1000.err  mc_w_010_1000.err  mc_w_025_1000.err  mc_w_050_1000.err  mc_w_off_1000.err
HTS_TEST/t6_sim/: .gitignore  CURSOR_BUILD_ENV_PHASE2.md  Gen_HarqDiagMd.ps1  HARQ_DIAG_ANALYSIS.md  HARQ_Matrix_Results.csv  HARQ_Matrix_Results_BEFORE_V5.csv  HARQ_Matrix_Results_STEP_D1.csv  HARQ_Matrix_Results_STEP_D_PRE3.csv  HARQ_Matrix_Results_kAmp100_attempt.csv  HARQ_Matrix_Results_phaseA_k1000.csv  HTS_BER_PER_Measure.cpp  HTS_BER_PER_Measure.hpp  HTS_BER_PER_UnitTest.cpp  HTS_Block_Message_Test.cpp  HTS_FEC_HARQ.i  HTS_FEC_Layer_LPI_Isolation_Test.cpp  HTS_FEC_Layer_Partial_Test.cpp  HTS_FEC_Layer_Real_Sync_Test.cpp  HTS_Harq_Matrix_Test.cpp  HTS_Holographic_Unit_Test.cpp  HTS_Jammer_STD.cpp  HTS_Jammer_STD.hpp  HTS_Jammer_STD_UnitTest.cpp  HTS_Phase3_MIL.hpp  HTS_Phase3_MIL_Report.hpp  HTS_Session_Derive_Stub.cpp  HTS_T6_SIM_Test.cpp  HTS_T6_SIM_Test.vcxproj  HTS_T6_SIM_Test.vcxproj.filters  HTS_V400_Dispatcher_Local.cpp  HTS_V400_Dispatcher_Local.hpp  KAMP_ADJUST_SUMMARY.md  PHASE_C_HARQ_SUMMARY.md  ParseKampCsv.ps1  RESULT_AGC_SWEEP.md  RESULT_AMP_DIAG.md  RESULT_CONV_REP4_DISCOVERY.md  RESULT_CW_DETECT_PHASE1.md  RESULT_CW_DETECT_PHASE2.md  RESULT_CW_EXCISION_PHASE3.md  (+313 more)
HTS_TEST/t6_waterfall/: HTS_T6_Waterfall_Harness.cpp  RESULT_WATERFALL_V2_DOUBLE.md  WaterfallSpec.hpp  build_waterfall.bat  run_waterfall.bat  (+4 more)
arm_firmware/: CMakeLists.txt  HTS_HAL_Dummy.cpp  HTS_Interface_Manager.cpp  build_m4.ps1  main.cpp  startup_stm32f407xx.S  stm32f407vx.ld  stub_hts_api.cpp  stub_lsh256_bridge.cpp  syscalls.cpp  system_stm32f407xx.c
(+779 files in other folders)
